Fixed simple spacing stuff

--- a/main.less
+++ b/main.less
@@ -42,19 +42,20 @@ p {
 		color: @gold;
 		text-align: center;
 	}
+	margin-bottom: 2rem;
 }
 .header-text {
 	position: absolute;
 	top: 20%;
 }
 .subheader {
-	padding-top: 15px;
+	padding-top: 1rem;
 	text-align: center;
 	color: @gold;
 	font-size: 2em;
 }
 .section {
-	margin-bottom: 30px;
+	margin-bottom: 2rem;
 	h1 {
 		color: @red;
 	}
